<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rau.friendships.welcome">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:id="@+id/imageview_profile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_man"
        android:contentDescription="@string/profile_pic_descriptor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_message"
        android:id="@+id/textview_greeting"
        android:layout_below="@+id/imageview_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_create_delivery"
        android:id="@+id/createdelivery"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ff2057ff"
        android:onClick="createDelivery"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_view_deliveries"
        android:id="@+id/viewdeliveries"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/createdelivery"
        android:layout_alignStart="@+id/createdelivery"
        android:background="#ff2057ff"
        android:onClick="viewDeliveries"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:id="@+id/addfriend"
        android:layout_below="@+id/viewdeliveries"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#ff2057ff"
        android:onClick="addFriend"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>