<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rau.friendships.LoginActivity"
    android:background="#ffffffff"
    android:id="@+id/log">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/imageview_app_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"
        android:adjustViewBounds="true"
        android:padding="32dp"
        android:background="#ffffffff"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false" />

    <EditText
        android:id="@+id/edittext_username"
        android:hint="@string/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/imageview_app_logo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_below="@+id/edittext_username"
        android:layout_alignRight="@+id/edittext_username"
        android:layout_alignLeft="@+id/edittext_username"
        android:hint="@string/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:singleLine="true"
        android:maxLines="1"/>

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@+id/edittext_password"
        android:layout_alignLeft="@+id/edittext_password"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="2"
        android:paddingRight="5dip"
        android:paddingLeft="5dip"
        android:paddingBottom="5dip">

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:background="#ff2057ff"
            android:onClick="signUp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_weight="1"
            android:background="#ff2057ff"
            android:layout_marginLeft="5dip"
            android:onClick="login"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fpds"
        android:id="@+id/descriptionTextView"
        android:layout_alignBottom="@+id/imageview_app_logo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPasswordButton"
        android:background="#ffffffff"
        android:textColor="#ffff0100"
        android:layout_below="@+id/checkbox_remember_me"
        android:layout_centerHorizontal="true"
        android:onClick="forgotPassword"/>
</RelativeLayout>