<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rau.friendships.Profile"
    android:contentDescription="@string/profile_pic_descriptor">

<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:adjustViewBounds="true"
    android:id="@+id/imageview_profile"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="32dp"
    android:src="@mipmap/ic_man" />

<TextView
    android:id="@+id/textview_username"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/username"
    android:layout_below="@+id/imageview_profile"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp" />

<TextView
    android:id="@+id/textview_email"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/email"
    android:layout_below="@+id/textview_username"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    />

</RelativeLayout>